messed around and then fixed portrait spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ p, legend {
 		inset 0 0 5rem #000,
 		inset 0 0 5rem #000;
 	border: 0.05rem solid #fff;
-	margin: 5rem 0 0 5rem;
+	margin: 5rem 0 0 7rem;
 }
 
 
